pkglibdir=$(libdir)/evgopherd
sbin_PROGRAMS = nrf24-mqtt

nrf24_mqtt_SOURCES = main.c nrf24-mqtt.h \
	 debug.c debug.h cfg.h cfg.c mqtt.c mqtt.h \
         nrf24-recv.c nrf24-recv.h
# evgopherd_CFLAGS = $(libevent_CFLAGS) $(libdaemon_CFLAGS)
# evgopherd_LDFLAGS = $(libevent_LIBS) $(libdaemon_LIBS)

